--- a/cfp.html
+++ b/cfp.html
@@ -35,7 +35,7 @@
 					
 					<div id="navigation" class="navbar-collapse collapse  justify-content-lg-end me-lg-3">
 						<ul class="nav navbar-nav">
-							<li class="nav-item"><a class="nav-link scrollto" href="./index.html">Homepage</a></li>
+							<li class="nav-item"><a class="nav-link scrollto" href="https://nkzwlab.github.io/aiotsys2026/">Homepage</a></li>
 							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Calls</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li><a class="dropdown-item" href="./cfp.html">Call for Papers</a></li>
