--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					
 					<div id="navigation" class="navbar-collapse collapse  justify-content-lg-end me-lg-3">
 						<ul class="nav navbar-nav">
-							<li class="nav-item"><a class="nav-link scrollto" href="./index.html">Homepage</a></li>
+							<li class="nav-item"><a class="nav-link scrollto" href="https://nkzwlab.github.io/aiotsys2026/">Homepage</a></li>
 							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Calls</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li><a class="dropdown-item" href="./cfp.html">Call for Papers</a></li>
@@ -103,7 +103,7 @@
                     </div>
                   </div>
                   <!-- <div class="collapse mt-2" id="news-08-29-2025">
-                    <div class="news-content"> <a class="text-primary" href="./index.html">More Information</a>
+                    <div class="news-content"> <a class="text-primary" href="https://nkzwlab.github.io/aiotsys2026/">More Information</a>
                     </div>
                   </div> -->
                 </div>
