--- a/index.html
+++ b/index.html
@@ -35,25 +35,24 @@
 					
 					<div id="navigation" class="navbar-collapse collapse  justify-content-lg-end me-lg-3">
 						<ul class="nav navbar-nav">
-							<li class="nav-item"><a class="nav-link scrollto" href="./index.html">Homepage</a></li>
-							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Calls</a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="./cfp.html">Call for Papers</a></li>
-                <li><a class="dropdown-item" href="./cfr.html">Call for Rising Stars</a></li>
-
-							</ul>
-							</li>
-							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Committees</a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="./organization.html">Organization</a></li>
-								<li><a class="dropdown-item" href="./tpc.html">Technical Program Committee</a></li>
-							</ul>
-							</li>
-							<li class="nav-item"><a class="nav-link scrollto" href="./registration.html">Registration</a></li>
-              <li class="nav-item"><a class="nav-link scrollto" href="./program.html">Program</a></li>
-							<li class="nav-item"><a class="nav-link scrollto" href="./awards.html">Awards</a></li>
-							<li class="nav-item"><a class="nav-link scrollto" href="./sponsors.html">Sponsors</a></li>
-						</ul>
+            <li class="nav-item"><a class="nav-link" href="./index.html">Homepage</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Calls</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./cfp.html">Call for Papers</a></li>
+              <li><a class="dropdown-item" href="./cfr.html">Call for Rising Stars</a></li>
+            </ul>
+            </li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Committees</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./organization.html">Organization</a></li>
+              <li><a class="dropdown-item" href="./tpc.html">Technical Program Committee</a></li>
+            </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="./registration.html">Registration</a></li>
+            <li class="nav-item"><a class="nav-link" href="./program.html">Program</a></li>
+            <li class="nav-item"><a class="nav-link" href="./awards.html">Awards</a></li>
+            <li class="nav-item"><a class="nav-link" href="./sponsors.html">Sponsors</a></li>
+            </ul>
 					</div><!--//navabr-collapse-->
 
 				</nav><!--//main-nav-->
