--- a/program.html
+++ b/program.html
@@ -64,20 +64,10 @@
 
   <section class="section" id="cfp-section"></section>
   <div class="container mb-3">
-  <h3 class="section-heading text-center mb-3">2026 AIoTSys Call for Rising Stars</h3>
+  <h3 class="section-heading text-center mb-3">2026 AIoTSys Registration</h3>
   <div class="section-intro single-col-max mx-auto mb-4">
         <p> <strong>TBD</strong></p>
         <p>TBD </p>
-  </div>
-  <h4 class="single-col-max mx-auto mb-3">Important Dates:</h4>
-
-  <div class="section-intro single-col-max mx-auto mb-4">
-        <p> <strong>Abstract Registration: </strong>
-          TBD
-        </p>
-        <p> <strong>Rising Stars Submission Deadline: </strong>TBD</p>
-        <p> <strong>Acceptance Notification: </strong>TBD</p>
-  </div>
   </div>
 
   <footer class="footer py-5 theme-bg-primary">
