update page names

--- a/program.html
+++ b/program.html
@@ -64,7 +64,7 @@
 
   <section class="section" id="cfp-section"></section>
   <div class="container mb-3">
-  <h3 class="section-heading text-center mb-3">2026 AIoTSys Registration</h3>
+  <h3 class="section-heading text-center mb-3">2026 AIoTSys Full Program</h3>
   <div class="section-intro single-col-max mx-auto mb-4">
         <p> <strong>TBD</strong></p>
         <p>TBD </p>
